{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 15,
  "lineage": "6b4c4b00-642d-395a-8967-ee2f744c6107",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "backend_allow_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-15T04:13:36.704-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/backend-allow-api",
            "log_config": [],
            "name": "backend-allow-api",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-backend",
            "priority": 1000,
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/backend-allow-api",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "backend_allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-04-15T04:13:37.317-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/backend-allow-icmp",
            "log_config": [],
            "name": "backend-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-backend",
            "priority": 1000,
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/backend-allow-icmp",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "backend_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-15T04:13:37.262-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/backend-allow-ssh",
            "log_config": [],
            "name": "backend-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-backend",
            "priority": 1000,
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/backend-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-15T04:13:36.581-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/frontend-allow-http",
            "log_config": [],
            "name": "frontend-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-frontend",
            "priority": 1000,
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/frontend-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_allow_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-04-15T04:13:36.833-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/frontend-allow-icmp",
            "log_config": [],
            "name": "frontend-allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-frontend",
            "priority": 1000,
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/frontend-allow-icmp",
            "source_ranges": [
              "10.0.2.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "frontend_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-15T04:13:36.837-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/frontend-allow-ssh",
            "log_config": [],
            "name": "frontend-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-frontend",
            "priority": 1000,
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/firewalls/frontend-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260413",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/zones/europe-west4-a/disks/vm-backend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/zones/europe-west4-a/instances/vm-backend",
            "instance_id": "342874092790270996",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "qE6rVy_ClrI=",
            "metadata_startup_script": "    #!/bin/bash\n    apt-get update -y\n    apt-get install -y nodejs npm\n    mkdir -p /home/app\n    cat \u003c\u003c'JSEOF' \u003e /home/app/server.js\nconst http = require('http');\nconst server = http.createServer((req, res) =\u003e {\n  res.setHeader('Access-Control-Allow-Origin', '*');\n  res.setHeader('Content-Type', 'application/json');\n  res.end(JSON.stringify({ status: 'ok', message: 'Hello from backend!' }));\n});\nserver.listen(3000, () =\u00 [...]
            "name": "vm-backend",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.147.11.105",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-backend",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/regions/europe-west4/subnetworks/subnet-backend",
                "subnetwork_project": "qwiklabs-gcp-01-c3e4f9b9d239"
              }
            ],
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/zones/europe-west4-a/instances/vm-backend",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend"
            ],
            "tags_fingerprint": "lw1rxEJIHXc=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_network.vpc_backend",
            "google_compute_subnetwork.subnet_backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260413",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/zones/europe-west4-a/disks/vm-frontend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/zones/europe-west4-a/instances/vm-frontend",
            "instance_id": "1893438839485287912",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "LAgemlT6P80=",
            "metadata_startup_script": "    #!/bin/bash\n    apt-get update -y\n    apt-get install -y nginx\n    BACKEND_IP=\"10.0.2.2\"\n    cat \u003e /var/www/html/index.html \u003c\u003cHTML\n\u003c!DOCTYPE html\u003e\n\u003chtml\u003e\n\u003chead\u003e\u003ctitle\u003eFrontend\u003c/title\u003e\u003c/head\u003e\n\u003cbody\u003e\n  \u003ch1\u003eFrontend VM\u003c/h1\u003e\n  \u003cp\u003eCalling backend at: $BACKEND_IP:3000\u003c/p\u003e\n  \u003cdiv id=\"result\"\u003eLoading...\u003c/div [...]
            "name": "vm-frontend",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.12.81.141",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-frontend",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/regions/europe-west4/subnetworks/subnet-frontend",
                "subnetwork_project": "qwiklabs-gcp-01-c3e4f9b9d239"
              }
            ],
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/zones/europe-west4-a/instances/vm-frontend",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "frontend"
            ],
            "tags_fingerprint": "4s55Dl-6pHw=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_instance.vm_backend",
            "google_compute_network.vpc_backend",
            "google_compute_network.vpc_frontend",
            "google_compute_subnetwork.subnet_backend",
            "google_compute_subnetwork.subnet_frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-backend",
            "mtu": 0,
            "name": "vpc-backend",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2204838098887691322",
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-backend"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-frontend",
            "mtu": 0,
            "name": "vpc-frontend",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2210540458247113787",
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-frontend"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-15T04:13:39.558-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/regions/europe-west4/subnetworks/subnet-backend",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "subnet-backend",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-backend",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/regions/europe-west4/subnetworks/subnet-backend",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-15T04:13:36.991-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/qwiklabs-gcp-01-c3e4f9b9d239/regions/europe-west4/subnetworks/subnet-frontend",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-frontend",
            "network": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/global/networks/vpc-frontend",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "qwiklabs-gcp-01-c3e4f9b9d239",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/qwiklabs-gcp-01-c3e4f9b9d239/regions/europe-west4/subnetworks/subnet-frontend",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_frontend"
          ]
        }
      ]
    }
  ]
}